tests/specs/run/import_attributes_unsupported_attribute/dynamic.out
error: Uncaught (in promise) TypeError: "BABEL_8_BREAKING" attribute is not supported.
await import("./mod.ts", { with: { BABEL_8_BREAKING: "false" } });
^
    at [WILDCARD]dynamic.ts:1:1
