tests/specs/run/import_attributes_unsupported_attribute/dynamic.ts
await import("./mod.ts", { with: { BABEL_8_BREAKING: "false" } });
